--- a/src/auth_config.json
+++ b/src/auth_config.json
@@ -1,4 +1,4 @@
 {
-  "domain": "still-frost-0676.auth0.com",
-  "clientId": "jrmNuLTqd1H1P0bkZ_31W4mJKk4oqIz9"
+  "domain": "twilight-sun-3141.auth0.com",
+  "clientId": "bHvMYOe4QEUKga6aPqH1MA4lHr8bKr4I"
 }
